<resources>
    <string name="app_name">Quiz</string>
    <string name="texto_login">Login</string>
    <string name="texto_senha">Senha</string>
    <string name="login_hint">E-mail</string>
    <string name="senha_hint">Senha</string>
    <string name="btn_acesso">Acessar</string>
    <string name="btn_jogo">Iniciar o Jogo</string>
    <string name="user_required">Usuário Obrigatório</string>
    <string name="pass_required">Senha é Obrigatória</string>
    <string name="email_valido">Entre com um e-mail válido</string>
    <string name="autentication">Autenticado</string>
    <string name="regras">Regras do Jogo: </string>
    <string name="title_activity_este">Sign in</string>

    <!-- Strings de texto das regras -->

    <string name="regra1">. O jogo só terá início após os grupos estarem fechados;</string>
    <string name="regra2">. Você tem xx segundos para responder a questão;</string>
    <string name="regra3">. A cada acerto será computado xx pontos na pontuação total;</string>
    <string name="regra4">. A cada erro será removido xx pontos na pontuação total;</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="texto_titulo_resultado">Resultado</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
