<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.diehard.quiz.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:src="@drawable/quizlogo"
        android:layout_marginBottom="24dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:text="@string/texto_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:orientation="horizontal"
        android:id="@+id/email_login"
        android:inputType="textEmailAddress"
        android:hint="@string/login_hint"
        android:singleLine="true"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:text="@string/texto_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:orientation="horizontal"
        android:id="@+id/senha_login"
        android:inputType="textPassword"
        android:layout_gravity="center_horizontal"
        android:singleLine="true"
        android:maxLength="10"
        android:hint="@string/senha_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:orientation="horizontal"
        android:id="@+id/btn_acesso"
        android:text="@string/btn_acesso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_acesso"/>


</LinearLayout>
